--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
         </div>
         <div class="navbar__s3">
             <p>Courses</p>
-            <p>My learing</p>
+            <!-- <p>My learning</p> -->
+             <div class="mylearning">
+                <p>My learing</p>
+                <div class="mylearning__popup">
+                    <p>you did not purchase anything yet</p>
+                </div>
+             </div>
             <i class="fa-solid fa-cart-shopping" style="color: #1c1c1c;"></i>
             <i class="fa-solid fa-bell" style="color: #0c0d0e;"></i>
             <i class="fa-solid fa-user" style="color: #1c1c1c;"></i>
@@ -50,8 +56,13 @@
         <!--Sale image-->
          <div class="Sale-image">
             <img src="./image/sale.image.png" alt="sale image">
-            <!--Recommended-->
+            <div class="offer__box">
+                <h2>OfferBox</h2>
+                <p>Pick Any Course Discount=25%</p>
+            </div>
+            
          </div>
+         <!--Recommended-->
          <div class="recommended">
             <h1 class="recommended__title">Recommended for you</h1>
             <p>pick the first</p>
