updated the one file

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p>Courses</p>
             <!-- <p>My learning</p> -->
              <div class="mylearning">
-                <p>My learing</p>
+                <p>My learning</p>
                 <div class="mylearning__popup">
                     <p>you did not purchase anything yet</p>
                 </div>
